fixed visibility of cookie consent banner

--- a/src/app/shared/components/cookieconsent/cookie-banner/cookie-banner.component.css
+++ b/src/app/shared/components/cookieconsent/cookie-banner/cookie-banner.component.css
@@ -6,7 +6,7 @@
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   padding: 15px;
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
